# day_day_gu_bot.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: github.rs  main.rs  telegram.rs
