[package]
name = "day_day_gu_bot"
version = "0.1.0"
authors = ["laxect <me@gyara.moe>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
async-std = { version = "1.6.5", features = ["attributes"] }
tide = "0.14.0"
anyhow = "1.0.33"
log = "0.4.11"
env_logger = "0.8.1"
surf = "2.1.0"
once_cell = "1.4.1"
