[package]
name = "day_day_gu_bot"
version = "0.1.0"
authors = ["laxect <me@gyara.moe>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "0.16.0"
anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.8.3"
surf = "2.2.0"
once_cell = "1.7.2"
